# pydie

./: README.md  pyproject.toml
src/: conf.py
src/pydie/: converter.md  converter.py  interfaces.py  json_sql_schema.py  meta.py  response_to_sql.py
src/pydie/converters/: base.py
src/pydie/fetchers/: base.py  rest.py
src/pydie/integrator/: README.md  base.py  open_api.py  open_api_config.py
src/pydie/interfaces/: rest.py
src/pydie/rest/: fetchers.py  interfaces.py
tests/rest/: config.json  interfaces.py
