[project]
name = "pydie"
version = "0.0.2"
dependencies = [
  "pyodbc",
  "pandas",
  "pyyaml",
]
authors = [
  { name="Rodrigo Morais", email="rodrigohmorais@proton.me" },
]
description = "Python Database Integration Engine"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rodigu/pydie"
Issues = "https://github.com/rodigu/pydie/issues"
